# GPUSpecialisation-Course3

./: .envrc  CMakeLists.txt  LICENSE  README.md  pixi.toml
include/: edge_npp.h
src/: edge_npp.cu
